Creo el div cabecera

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hyperblog</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
+        <title>Hyperblog</title>
+    </head>
+    <body>
+        <div>
+            <div id="cabecera">
+                <img src="media/astronauta.jpg" alt="astronauta">
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+        </div>
+    </body>
 </html>
