Cambio color backgroud y cabecera

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <title>Hyperblog</title>
     </head>
     <body>
-        <div>
+        <div id="container">
             <div id="cabecera">
-                <img src="media/astronauta.jpg" alt="astronauta">
+                <img id="logo" src="media/astronauta.jpg" alt="astronauta">
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
