--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Hyperblog</title>
 </head>
 <body>
-    
+    <div id="footer">
+        Hecho con amor por Alejadro ❤️
+    </div>
 </body>
 </html>
